--- a/nicepage.css
+++ b/nicepage.css
@@ -43372,6 +43372,10 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-right: 13px;
     margin-bottom: 16px;
   }
+
+  .u-header .u-nav-6 {
+    margin: 20px 0 0;
+  }
 }
 @media (max-width: 767px) {
   .u-header .u-menu-1 {
@@ -43394,7 +43398,7 @@ a.u-link.u-text-hover-grey-90:hover {
 
 .u-footer .u-text-1 {
   width: 417px;
-  margin: 15px auto;
+  margin: 26px auto;
 }
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
